force-app/main/default/objects/Project__c/fields/Project_Area__c.field-meta.xml
<CustomField>
    <fullName>Project_Area__c</fullName>
    <label>Project Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>