force-app/main/default/objects/Project__c/fields/Project_Area_in_sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Project_Area_in_sq_mt__c</fullName>
    <formula>Project_Area_in_sqft__c/ 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Area (in sq.mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>