force-app/main/default/objects/Project__c/fields/Rera_Number__c.field-meta.xml
<CustomField>
    <fullName>Rera_Number__c</fullName>
    <label>Rera Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>